--- a/src/Space/Space.css
+++ b/src/Space/Space.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   border: none;
+  outline: none;
   font-size: 4em;
 
   cursor: pointer;
