--- a/src/TicTacToe/TicTacToe.css
+++ b/src/TicTacToe/TicTacToe.css
@@ -1,12 +1,13 @@
 .TicTacToe {
   background-color: #61dafb;
   border: none;
+  outline: none;
   margin: 3rem;
   display: grid;
   grid-template-columns: 100px 100px 100px;
   /* This is better for small screens, once min() is better supported */
   /* grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr)); */
-  grid-gap: 1rem;
+  gap: 15px;
   /* This is the standardized property now, but has slightly less support */
   /* gap: 1rem */
 
